Fixed the vehicle name
