# routes/index.js
@@ -1,5 +1,5 @@
 const express = require("express");
 const router = express.Router();
 router.use("/", require("./swagger"));
-router.use("/vehicles", require("./vehicles"));
+router.use("/vehicle", require("./vehicles"));
 module.exports = router;
